--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,196 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "Catamaran";
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat";
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  width: auto;
+  height: auto;
+  background-image: linear-gradient(rgb(119, 196, 196), rgb(219, 166, 175));
+}
+
+header {
+  width: 100%;
+  padding-top: 5vh;
+}
+
+header ul {
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  list-style: none;
+}
+
+header ul li {
+  cursor: pointer;
+  position: relative;
+  padding: 0px 5px;
+  padding-bottom: 5px;
+}
+
+header ul li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: transparent;
+  transition: background-color 0.5s ease, transform 0.5s ease;
+}
+
+header ul li:hover::before,
+header ul li.active::before {
+  background-color: white;
+  transform: scaleY(1);
+}
+
+header ul li:hover,
+header ul li.active {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.aboutSection {
+  margin-top: 5vh;
+  height: auto;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-evenly;
+  gap: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.button-63 {
+  align-items: center;
+  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #ffffff;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 10px 20px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.button-63:active,
+.button-63:hover {
+  outline: 0;
+}
+
+.imageSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.educationSection {
+  display: flex;
+  overflow-x: auto;
+  padding: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative; 
+  gap: 1rem;
+}
+
+.educationSection > div {
+  flex: 0 0 50%; 
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+
+.right-icon, .left-icon {
+  position: absolute; 
+  top: 50%; 
+  background-color: rgba(0, 0, 0, 0.5); 
+  color: white;
+  padding: 0.5rem 1rem; 
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 1.5rem; 
+  transform: translateY(-50%); 
+  z-index: 10; 
+  transition: background-color 0.3s ease;
+}
+
+.right-icon {
+  right: 1rem; 
+}
+
+.left-icon {
+  left: 1rem; 
+}
+
+.right-icon:hover, .left-icon:hover {
+  background-color: rgba(0, 0, 0, 0.8); 
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 600px) {
+  header {
+    padding-left: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  header ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .button-63 {
+    font-size: 24px;
+    min-width: 196px;
+  }
+  main .aboutSection {
+    display: flex;
+    flex-direction: column;
+  }
+  .educationSection > div {
+    /* flex-direction: column; */
+    flex: 0 0 100%;
   }
 }
