--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,12 @@ html {
 
 body {
   font-family: "Catamaran";
+  /* font-weight: 800; */
 }
 .head{
   font-family: "Catamaran";
   padding-left: 1rem;
+  font-weight: 800;
 }
 h1,
 h2,
@@ -23,6 +25,9 @@ h4,
 h5,
 h6 {
   font-family: "Montserrat";
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 800;
 }
 a{
   text-decoration: none;
@@ -37,6 +42,10 @@ main {
   height: auto;
   background-image: linear-gradient(135deg, #89f7fe, #66a6ff);
   overflow-x: hidden;
+}
+
+p {
+  text-align: justify;
 }
 
 header {
@@ -81,6 +90,7 @@ header ul li.active {
 }
 
 .headingSection{
+  text-transform: uppercase;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -98,18 +108,31 @@ header ul li.active {
 .aboutSection {
   height: auto;
   padding: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
   justify-content: space-evenly;
   gap: 2rem;
+  align-items: center;
+
 }
 
-.intro {
+.aboutSection .intro {
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 1rem;
+}
+
+.aboutSection .imageSection {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.aboutSection .imageSection img{
+  width: 90%;
 }
 
 .button-63 {
@@ -141,20 +164,15 @@ header ul li.active {
   outline: 0;
 }
 
-.imageSection {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .educationSection {
   display: flex;
-  overflow-x: auto;
+  overflow-x: hidden;
   padding: 1rem;
   width: 100%;
   box-sizing: border-box;
   position: relative; 
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .educationSection > div {
@@ -165,6 +183,21 @@ header ul li.active {
   gap: 1rem;
 }
 
+.projects .educationSection .graduate .projectImage{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.projects .educationSection .graduate .projectImage img{
+  width: 90%;
+}
+.projects .educationSection .graduate .projectDescription{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 /* 
 .right-icon, .left-icon {
   position: absolute; 
@@ -303,10 +336,8 @@ header ul li.active {
   margin-bottom: 1rem;
 }
 .contact-main {
-  width: 1000px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-evenly;
   gap: 10px;
 }
 
@@ -321,6 +352,7 @@ header ul li.active {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -351,9 +383,9 @@ input[type="text"] {
 }
 
 #text {
-  width: 400px;
+  width: 500px;
   height: 250px;
-  border-radius: 30px;
+  border-radius: 10px;
   font-size: 14px;
   font-weight: light;
   padding: 15px;
@@ -409,4 +441,35 @@ input[type="submit"] {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  .aboutSection .intro{
+    width: 100%;
+  }
+  .aboutSection .imageSection{
+    width: 100%;
+  }
+  .experience{
+    margin: 0px;
+  }
+  .contact-main{
+    flex-direction: column;
+  }
+.contact .contact-main .section1 div a{
+  display: none;
+}
+.contact .contact-main .section1{
+  flex-direction: row;gap: 2rem;
+}
+input[type="text"]{
+  width: 300px;
+}
+#text{
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+}
+.section2 form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 }
