--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,7 @@ a{
   text-decoration: none;
   color: black;
 }
-a:hover{
-  color: white;
-}
+
 
 main {
   width: auto;
@@ -337,7 +335,9 @@ header ul li.active {
 }
 .contact-main {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
 }
 
@@ -348,21 +348,21 @@ header ul li.active {
 }
 
 .section1 {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
   gap: 1rem;
 }
 
-.section1 div {
+/* .section1 div {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 1rem;
-}
+} */
 
 .section2 form {
   display: flex;
@@ -401,6 +401,44 @@ input[type="submit"] {
   color: white;
   cursor: pointer;
   font-size: 1.2rem;
+}
+
+/* Blocks css */
+
+.block{
+  margin-top: 10px;
+  display: flex;
+  width:100px;
+  height:100px;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+
+
+.block:hover{
+  background-color: rgb(204, 201, 201);
+}
+
+.icon{
+  width: 50px;
+  height: 50px;
+  background-color: rgb(241, 238, 238);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.alink{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 
@@ -453,9 +491,7 @@ input[type="submit"] {
   .contact-main{
     flex-direction: column;
   }
-.contact .contact-main .section1 div a{
-  display: none;
-}
+
 .contact .contact-main .section1{
   flex-direction: row;gap: 2rem;
 }
