--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,6 @@ header ul li.active {
   width: 100%;
   box-sizing: border-box;
   position: relative; 
-  gap: 2rem;
 }
 
 .educationSection > div {
@@ -179,7 +178,9 @@ header ul li.active {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-right: 2rem;
 }
+
 
 .projects .educationSection .graduate .projectImage{
   display: flex;
@@ -196,6 +197,9 @@ header ul li.active {
   flex-direction: column;
   gap: 1rem;
 }
+/* .projects .educationSection .graduate .projectDescription p{
+  padding-right: 3rem;
+} */
 /* 
 .right-icon, .left-icon {
   position: absolute; 
@@ -239,10 +243,14 @@ header ul li.active {
   padding: 1rem 0rem;
   margin-left: 1rem;
   display: flex;
+  flex-direction: column;
   gap: 2rem;
   width: 100%;
   justify-content: center;
   align-items: center;
+}
+.experience section{
+  display: flex;
 }
 
 .experience .imgsection{
@@ -269,63 +277,31 @@ header ul li.active {
   align-items: center;
   padding-right: 1rem;
 }
-
+.experience .companyInfo p{
+  padding-right: 1rem;
+}
 
 /* Skills */
 
-.skillsSection{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+.skillBlock{
+  display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
-.skillsSection .skill-circle {
+.skillimg{
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
-}
-
-.skillsSection .circle {
-  width: 100px;
-  height: 100px;
-  background: conic-gradient(#4caf50 0% 0%, #ddd 0% 100%);
+  background-color: rgb(241, 238, 238);
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  animation: fillCircle 2s forwards;
 }
-
-.skillsSection .inner-circle {
-  width: 80px;
-  height: 80px;
-  background-color: white;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.skillsSection .percentage {
-  font-size: 1.2em;
-  font-weight: bold;
-}
-
-.skillsSection .skill-name {
-  margin-top: 10px;
-  font-size: 1em;
-  font-family: 'Montserrat', sans-serif;
-}
-
-@keyframes fillCircle {
-  from {
-    background: conic-gradient(#4caf50 0%, #ddd 0%);
-  }
-  to {
-    background: conic-gradient(#4caf50 0% calc(var(--percentage) * 1%), #ddd calc(var(--percentage) * 1%) 100%);
-  }
+.skillimg i{
+font-size: 1.5rem;
 }
 
 
@@ -397,10 +373,13 @@ input[type="submit"] {
   width: 250px;
   margin-top: 1rem;
   border-radius: 18px;
-  background-color: #df5b5b;
-  color: white;
+  background-color: rgb(241, 238, 238);
   cursor: pointer;
   font-size: 1.2rem;
+}
+
+input[type="submit"]:hover{
+  background-color: rgb(204, 201, 201);
 }
 
 /* Blocks css */
@@ -410,7 +389,6 @@ input[type="submit"] {
   display: flex;
   width:100px;
   height:100px;
-  padding: 10px;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
