--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,17 @@ header ul li.active {
   gap: 1rem;
 }
 
+main .aboutSection .intro h1{
+  text-align: center;
+  width: 100%;
+}
+
+main .aboutSection .intro span{
+  width: 100%;
+  text-align:end;
+  font-size: 20px;
+}
+
 .aboutSection .imageSection {
   width: 50%;
   display: flex;
@@ -135,7 +146,7 @@ header ul li.active {
   width: 90%;
 }
 
-.button-63 {
+/* .button-63 {
   align-items: center;
   background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
   border: 0;
@@ -157,6 +168,21 @@ header ul li.active {
   touch-action: manipulation;
   white-space: nowrap;
   cursor: pointer;
+} */
+
+.primaryButton{
+  padding: 10px;
+  width: 200px;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  background-color: rgb(186, 178, 178);
+  color: white;
+}
+
+.primaryButton:hover{
+  background-color: #4caf50;
+  transition: background-color 0.2s ease-in;
 }
 
 .button-63:active,
@@ -172,7 +198,7 @@ header ul li.active {
   width: 100%;
   box-sizing: border-box;
   position: relative; 
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .educationSection > div {
@@ -182,7 +208,9 @@ header ul li.active {
   flex-direction: column;
   gap: 1rem;
 }
-
+.educationSection > div > p{
+  padding-right: 2rem;
+}
 .projects .educationSection .graduate .projectImage{
   display: flex;
   flex-direction: column;
@@ -198,31 +226,9 @@ header ul li.active {
   flex-direction: column;
   gap: 1rem;
 }
-/* 
-.right-icon, .left-icon {
-  position: absolute; 
-  background-color: rgba(0, 0, 0, 0.5); 
-  color: white;
-  padding: 0.5rem 1rem; 
-  border-radius: 50%;
-  cursor: pointer;
-  font-size: 1.5rem;
-  z-index: 10; 
-  transition: background-color 0.3s ease;
+.projects .educationSection .graduate .projectDescription p{
+  padding-right: 2rem;
 }
-
-.right-icon {
-  right: 1rem; 
-}
-
-.left-icon {
-  left: 1rem; 
-}
-
-.right-icon:hover, .left-icon:hover {
-  background-color: rgba(0, 0, 0, 0.8); 
-} */
-
 
 .projects{
   margin-top: 1rem;
@@ -272,15 +278,19 @@ header ul li.active {
   padding-right: 1rem;
 }
 
+.experience .companyInfo p{
+  padding-right:1rem;
+}
+
 
 /* Skills */
-
-.skillsSection{
+.skillsSection {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-content: center;
   align-items: center;
 }
+
 .skillsSection .skill-circle {
   display: flex;
   flex-direction: column;
@@ -291,13 +301,13 @@ header ul li.active {
 .skillsSection .circle {
   width: 100px;
   height: 100px;
-  background: conic-gradient(#4caf50 0% 0%, #ddd 0% 100%);
+  background: conic-gradient(#4caf50 0%, #ddd 0%);
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  animation: fillCircle 2s forwards;
+  animation: fillCircle 2s ease forwards;
 }
 
 .skillsSection .inner-circle {
@@ -322,13 +332,15 @@ header ul li.active {
 }
 
 @keyframes fillCircle {
-  from {
+  0% {
     background: conic-gradient(#4caf50 0%, #ddd 0%);
   }
-  to {
+  100% {
     background: conic-gradient(#4caf50 0% calc(var(--percentage) * 1%), #ddd calc(var(--percentage) * 1%) 100%);
   }
 }
+
+
 
 
 /* Contact */
@@ -390,9 +402,10 @@ input[type="text"] {
   font-weight: light;
   padding: 15px;
   outline: none;
+  margin-bottom: 1rem;
 }
 
-input[type="submit"] {
+/* input[type="submit"] {
   height: 3rem;
   width: 250px;
   margin-top: 1rem;
@@ -401,7 +414,7 @@ input[type="submit"] {
   color: white;
   cursor: pointer;
   font-size: 1.2rem;
-}
+} */
 
 
 
@@ -421,6 +434,7 @@ input[type="submit"] {
     display: flex;
     flex-direction: column;
   }
+
   .educationSection > div {
     /* flex-direction: column; */
     flex: 0 0 100%;
