--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@ a{
 main {
   width: auto;
   height: auto;
-  background-image: linear-gradient(135deg, #89f7fe, #66a6ff);
+  /* background-image: linear-gradient(135deg, #89f7fe, #66a6ff); */
+  background-color: lightseagreen;
   overflow-x: hidden;
 }
 
